# acurast-benchmark

./: .gitlab-ci.yml  Dockerfile  jitpack.yml
android/: build.gradle.kts  settings.gradle.kts
android/app/: .gitignore  build.gradle.kts
android/app/src/androidTest/java/com/acurast/bench/: AcubenchNativeTest.kt  AcubenchTest.kt
android/app/src/main/cpp/: CMakeLists.txt
android/app/src/main/cpp/src/: acubench.cpp  acubench.h  ffi.cpp  ffi.h
android/app/src/main/cpp/test/: ffi_test.cpp  ffi_test.h
android/app/src/main/java/com/acurast/bench/: Acubench.kt
android/app/src/test/java/com/acurast/bench/: ExampleUnitTest.kt
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
rust/: Cargo.toml  rust-toolchain.toml
rust/ffi/: ffi.cpp  ffi.h
rust/src/: arm.rs  ffi.rs  lib.rs  macros.rs  utils.rs
rust/src/cpu/: crypto.rs  math.rs  mod.rs  sort.rs
rust/src/ram/: access.rs  alloc.rs  mod.rs
rust/src/storage/: access.rs  mod.rs
