[package]
name = "acubench"
version = "1.0.0-beta.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
aes = "0.8.4"
libc = "0.2.169"
num_cpus = "1.16.0"
rand = "0.8.5"
rayon = "1.10.0"
sha2 = "0.10.8"

[dev-dependencies]
hex-literal = "0.4.1"

[profile.dev]
overflow-checks = false

[profile.release]
overflow-checks = false